[tool.poetry]
name = "shuffled"
version = "1.1.0"
description = "Iterate randomly over integer ranges"
readme = "README.md"
homepage = "https://github.com/bbc2/shuffled"
authors = ["Bertrand Bonnefoy-Claudet <bertrand@bertrandbc.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
keywords = ["random", "integer", "iterator"]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.4"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E501", "E741"]
line-length = 88
