[tool.poetry]
name = "shuffled"
version = "1.1.0"
description = "Iterate randomly over integer ranges"
readme = "README.md"
homepage = "https://github.com/bbc2/shuffled"
authors = ["Bertrand Bonnefoy-Claudet <bertrand@bertrandbc.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
keywords = ["random", "integer", "iterator"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-benchmark = "^5.1.0"
pytest-cov = "^6.0.0"
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E501", "E741"]
line-length = 88
