
[project]
name = "shuffled"
version = "1.1.0"
description = "Iterate randomly over integer ranges"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Bertrand Bonnefoy-Claudet", email = "bertrand@bertrandbc.com" },
]
homepage = "https://github.com/bbc2/shuffled"
keywords = ["random", "integer", "iterator"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Typing :: Typed",
]
dependencies = [
  "cryptography",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.4",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling>=1.16"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E501", "E741"]
line-length = 88
